--- a/src/components/about/styles.scss
+++ b/src/components/about/styles.scss
@@ -5,16 +5,8 @@
   height: 100vh;
   width: 100vw;
   background-color: white;
+  @include flex(center, center, column);
   position: relative;
-  @include flex(center, center);
-}
-
-.section-title {
-  font-size: 350px;
-  position: absolute;
-  top: -200px;
-  opacity: 0.5;
-  text-align: center;
 }
 
 .about-content {
