--- a/src/components/education/styles.scss
+++ b/src/components/education/styles.scss
@@ -5,6 +5,8 @@
   height: auto;
   background-color: #f1f1f1;
   position: relative;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .education-content {
