--- a/src/components/experience/styles.scss
+++ b/src/components/experience/styles.scss
@@ -2,6 +2,75 @@
 @import "../../styles/global.scss";
 
 .experience {
-  height: 100vh;
+  height: auto;
+  background-color: white;
   position: relative;
+  padding-top: 100px;
+}
+
+.experience-content {
+  @include flex(center, center, column);
+  height: 100%;
+  padding-top: 50px;
+  gap: 150px;
+}
+
+.experience-item-logo {
+  @include flex(center, center);
+  gap: 10px;
+  img {
+    transform: rotate(5deg);
+  }
+}
+
+.experienceItem,
+.experienceItem-reverse {
+  width: 100%;
+  height: 222px;
+  @include flex(center, center);
+}
+
+.experienceItem-reverse {
+  transform: rotate(174deg);
+  .text {
+    transform: rotate(-180deg);
+  }
+}
+
+.experience-reverse {
+  transform: rotate(-180deg);
+}
+
+.experience-item-container,
+.experience-item-container-rev {
+  transform: rotate(5deg);
+  width: 100%;
+  @include flex(center, center);
+  padding: 15px;
+  background-color: #f1f1f1;
+  gap: 127px;
+  box-shadow: 15px 15px 15px rgba(0, 0, 0, 0.25);
+}
+
+.experience-item-container-rev {
+  box-shadow: -15px -15px 15px rgba(0, 0, 0, 0.25);
+  transform: rotate(3deg);
+}
+
+.experience-logo-part {
+  @include flex(center, center, column);
+  background-color: #1e1a2d;
+  padding: 20px;
+  color: #f1f1f1;
+  width: 565px;
+  font-size: 35px;
+}
+
+.experience-text {
+  max-width: 412px;
+  font-size: 30px;
+}
+
+.experience-text-part-rev {
+  transform: rotate(180deg);
 }
