--- a/src/components/main/styles.scss
+++ b/src/components/main/styles.scss
@@ -5,6 +5,7 @@
   background-image: url("../../images/IMG_2991\ 1.png");
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
   width: 100vw;
   height: 100vh;
   @include flex(center, center);
