--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,12 +1,13 @@
+* {
+  box-sizing: border-box;
+}
+
 .section-title {
-  font-size: 700px;
-  opacity: 0.3;
+  font-size: 200px;
   text-align: center;
   font-family: "Wire One";
   z-index: 14;
-  position: absolute;
-  top: 50%;
-  margin-top: -350px;
+  color: #1e1a2d;
 }
 
 h1,
@@ -14,7 +15,8 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+p {
   margin: 0;
   font-weight: normal;
   font-style: normal;
