--- a/src/components/navbar/styles.scss
+++ b/src/components/navbar/styles.scss
@@ -5,12 +5,12 @@
   padding: 75px 20px;
   background-color: #1e1a2d;
   @include flex(center, center);
-  max-width: 110px;
   border-radius: 30px 0 0 30px;
   font-size: 15px;
   position: fixed;
   right: 0;
-  top: 100px;
+  top: 50%;
+  margin-top: -160px;
   z-index: 5;
 }
 
