--- a/src/components/education/styles.scss
+++ b/src/components/education/styles.scss
@@ -5,8 +5,6 @@
   height: auto;
   background-color: #f1f1f1;
   position: relative;
-  padding-top: 100px;
-  padding-bottom: 100px;
 }
 
 .education-content {
@@ -14,17 +12,26 @@
   height: 100%;
   padding-top: 50px;
   gap: 150px;
+  @include s {
+    gap: 20px;
+    padding: 0;
+  }
 }
 
 .item-logo {
   @include flex(center, center);
   gap: 10px;
+  @include s {
+    img {
+      width: 30px;
+    }
+  }
 }
 
 .educationItem,
 .educationItem-reverse {
   width: 100%;
-  height: 222px;
+  max-height: 222px;
   @include flex(flex-end, center);
 }
 
@@ -48,6 +55,10 @@
   border-radius: 30px 0 0 30px;
   gap: 127px;
   box-shadow: 15px 15px 15px rgba(0, 0, 0, 0.25);
+  @include s {
+    gap: 20px;
+    border-radius: 0;
+  }
 }
 
 .item-container-rev {
@@ -60,11 +71,28 @@
   padding: 50px;
   border-radius: 30px 0 0 30px;
   color: white;
-  width: 565px;
   font-size: 35px;
+  @include s {
+    padding: 10px;
+    border-radius: 0;
+    min-width: 130px;
+  }
 }
 
 .text {
   max-width: 412px;
   font-size: 30px;
+  @include s {
+    font-size: 10px;
+    max-height: 78px;
+  }
+}
+
+.item-title {
+  @include s {
+    @include s {
+      font-size: 12px;
+      max-width: 110px;
+    }
+  }
 }
