--- a/src/components/experience/styles.scss
+++ b/src/components/experience/styles.scss
@@ -5,7 +5,7 @@
   height: auto;
   background-color: white;
   position: relative;
-  padding-top: 100px;
+  overflow: hidden;
 }
 
 .experience-content {
@@ -13,6 +13,9 @@
   height: 100%;
   padding-top: 50px;
   gap: 150px;
+  @include s {
+    gap: 50px;
+  }
 }
 
 .experience-item-logo {
@@ -21,12 +24,17 @@
   img {
     transform: rotate(5deg);
   }
+  @include s {
+    img {
+      width: 35px;
+    }
+  }
 }
 
 .experienceItem,
 .experienceItem-reverse {
   width: 100%;
-  height: 222px;
+  max-height: 222px;
   @include flex(center, center);
 }
 
@@ -50,6 +58,9 @@
   background-color: #f1f1f1;
   gap: 127px;
   box-shadow: 15px 15px 15px rgba(0, 0, 0, 0.25);
+  @include s {
+    gap: 30px;
+  }
 }
 
 .experience-item-container-rev {
@@ -62,13 +73,20 @@
   background-color: #1e1a2d;
   padding: 50px;
   color: #f1f1f1;
-  width: 565px;
+  width: 500px;
   font-size: 35px;
+  @include s {
+    font-size: 12px;
+    padding: 20px;
+  }
 }
 
 .experience-text {
   max-width: 412px;
   font-size: 30px;
+  @include s {
+    font-size: 10px;
+  }
 }
 
 .experience-text-part-rev {
