--- a/src/components/level/styles.scss
+++ b/src/components/level/styles.scss
@@ -6,21 +6,32 @@
   gap: 15px;
   font-size: 25px;
   padding: 10px 0 30px 0;
+  @include s {
+    gap: 10px;
+    font-size: 13px;
+    padding: 10px;
+  }
 }
 
 .level-container {
   @include flex(flex-start, center);
   overflow: hidden;
   border: 1px solid rgba(0, 0, 0, 0.25);
-  width: 60%;
+  width: 400px;
   height: 20px;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.25);
   background-color: white;
+  @include s {
+    width: 150px;
+  }
 }
 
 .level-title {
   @include flex(center, center);
   gap: 5px;
+  @include s {
+    flex-direction: column;
+  }
 }
 
 .html,
