--- a/src/components/skills/styles.scss
+++ b/src/components/skills/styles.scss
@@ -2,12 +2,15 @@
 @import "../../styles/global.scss";
 
 .skills {
-  padding-top: 100px;
   background-color: #f1f1f1;
+  @include s {
+    padding-top: 0;
+  }
 }
 
 .hard {
-  width: 600px;
+  max-width: 600px;
+  @include flex(center, center, column);
 }
 
 .hard-title {
@@ -23,4 +26,7 @@
 .first-part {
   @include flex(center, center);
   gap: 50px;
+  @include m {
+    flex-direction: column;
+  }
 }
