--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -6,5 +6,13 @@
 }
 
 @mixin m {
-  max-width: 1080px;
+  @media only screen and (max-width: 1300px) {
+    @content;
+  }
+}
+
+@mixin s {
+  @media only screen and (max-width: 768px) {
+    @content;
+  }
 }
