--- a/src/components/about/styles.scss
+++ b/src/components/about/styles.scss
@@ -14,6 +14,7 @@
   @include flex(center, center);
   gap: 50px;
   border-radius: 30px;
+  box-shadow: 15px 15px 15px rgba(0, 0, 0, 0.25);
   @include s {
     flex-direction: column;
     padding: 30px;
