--- a/src/components/education/styles.scss
+++ b/src/components/education/styles.scss
@@ -5,6 +5,7 @@
   height: auto;
   background-color: #f1f1f1;
   position: relative;
+  overflow: hidden;
 }
 
 .education-content {
@@ -48,14 +49,14 @@
 
 .item-container,
 .item-container-rev {
-  width: 85.5%;
+  width: 81.5%;
   @include flex(flex-start, center);
   padding: 15px;
   background-color: white;
   border-radius: 30px 0 0 30px;
   gap: 127px;
   box-shadow: 15px 15px 15px rgba(0, 0, 0, 0.25);
-  @include s {
+  @include m {
     gap: 20px;
     border-radius: 0;
   }
@@ -71,8 +72,14 @@
   padding: 50px;
   border-radius: 30px 0 0 30px;
   color: white;
-  font-size: 35px;
+  min-width: 427px;
   @include s {
+    padding: 10px;
+    border-radius: 0;
+    min-width: 130px;
+  }
+
+  @include m {
     padding: 10px;
     border-radius: 0;
     min-width: 130px;
@@ -81,14 +88,19 @@
 
 .text {
   max-width: 412px;
+  max-height: 175px;
   font-size: 30px;
+  font-weight: 200;
   @include s {
     font-size: 10px;
     max-height: 78px;
+    max-width: 250px;
   }
 }
 
 .item-title {
+  font-family: "Wire One";
+  font-size: 50px;
   @include s {
     @include s {
       font-size: 12px;
