--- a/src/components/experience/styles.scss
+++ b/src/components/experience/styles.scss
@@ -74,7 +74,9 @@
   padding: 50px;
   color: #f1f1f1;
   width: 500px;
-  font-size: 35px;
+  max-height: 222px;
+  font-family: "Wire One";
+  font-size: 50px;
   @include s {
     font-size: 12px;
     padding: 20px;
@@ -84,6 +86,7 @@
 .experience-text {
   max-width: 412px;
   font-size: 30px;
+  font-weight: 200;
   @include s {
     font-size: 10px;
   }
