--- a/src/components/footer/styles.scss
+++ b/src/components/footer/styles.scss
@@ -2,17 +2,75 @@
 @import "../../styles/global.scss";
 
 .footer {
+  width: 100%;
+  height: auto;
+  overflow: hidden;
+  color: white;
 }
 
 .wrapper {
-  overflow: hidden;
-  padding-top: 200px;
+  padding-bottom: 150px;
+  width: 100%;
+  height: 100%;
+  background-color: #1e1a2d;
+  transform: skewY(-3deg);
+  margin-top: 100px;
+  margin-bottom: -100px;
+  padding-top: 100px;
+  @include flex(center, center, column);
 }
 
 .footer-content {
+  transform: skewY(3deg);
+  @include flex(center, center, column);
+  gap: 20px;
+  width: 83.3%;
+}
+
+.logo-contacts {
   width: 100%;
-  height: 900px;
-  background-color: #1e1a2d;
-  transform: skewY(-5deg);
-  margin-bottom: -200px;
+  @include flex(space-between, center);
+  @include m {
+    flex-direction: column;
+  }
+}
+
+.footer-logo-part {
+  @include flex(center, center, column);
+}
+
+.footer-logo {
+  font-family: "Wire One";
+  color: white;
+  font-size: 60px;
+  font-weight: 600;
+}
+
+.contacts-part {
+  font-size: 20px;
+  text-align: justify;
+  p {
+    font-weight: 200;
+  }
+
+  @include s {
+    @include flex(center, center, column);
+    gap: 10px;
+    font-size: 15px;
+  }
+}
+
+.footer-social {
+  @include flex(center, center);
+  gap: 30px;
+  div {
+    background-color: white;
+    border-radius: 50px;
+    padding: 1px;
+  }
+}
+
+.description {
+  font-family: "Wire One";
+  font-size: 30px;
 }
