--- a/src/components/level/styles.scss
+++ b/src/components/level/styles.scss
@@ -6,6 +6,7 @@
   gap: 15px;
   font-size: 25px;
   padding: 10px 0 30px 0;
+
   @include s {
     gap: 10px;
     font-size: 13px;
@@ -17,18 +18,28 @@
   @include flex(flex-start, center);
   overflow: hidden;
   border: 1px solid rgba(0, 0, 0, 0.25);
+  border-radius: 15px;
   width: 400px;
   height: 20px;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.25);
   background-color: white;
+  @include m {
+    width: 250px;
+    height: 15px;
+  }
   @include s {
     width: 150px;
+    height: 10px;
   }
 }
 
 .level-title {
+  font-weight: 200;
   @include flex(center, center);
   gap: 5px;
+  p {
+    font-weight: 200;
+  }
   @include s {
     flex-direction: column;
   }
@@ -51,8 +62,8 @@
 .Chinese {
   background-color: #1e1a2d;
   height: 100%;
-  transform: skew(30deg);
   margin-left: -10px;
+  border-radius: 15px;
 }
 
 .English {
