--- a/src/components/main/styles.scss
+++ b/src/components/main/styles.scss
@@ -6,7 +6,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   @include flex(center, center);
   @include s {
@@ -14,31 +14,33 @@
   }
 }
 
+.contacts {
+  background-color: white;
+  padding: 60px;
+  border-radius: 30px;
+  transition: 0.5s;
+}
+
+.invisible {
+  position: absolute;
+  visibility: hidden;
+}
+
 .home-content {
-  max-width: 1260px;
-  padding: 30px;
-  @include flex(flex-start, center);
-  width: 100%;
+  width: 83.3%;
+  @include flex(flex-start, stretch);
+  gap: 30px;
   @include s {
     justify-content: center;
+    flex-direction: column;
   }
 }
 
 .upper-part {
   @include flex(center, center);
-  height: 100%;
   margin-bottom: 5px;
   @include s {
     flex-direction: column;
-  }
-}
-
-.social {
-  @include flex(center, center, column);
-  gap: 28px;
-  height: 100%;
-  @include s {
-    display: none;
   }
 }
 
@@ -48,8 +50,9 @@
 }
 
 .name {
-  font-size: 90px;
-  line-height: 100px;
+  font-size: 150px;
+  line-height: 130px;
+  font-family: "Wire One";
   @include s {
     font-size: 50px;
     line-height: normal;
@@ -57,7 +60,9 @@
 }
 
 .professions {
-  font-size: 26px;
+  padding-top: 20px;
+  font-size: 46px;
+  font-family: "Wire One";
   @include s {
     font-size: 18px;
   }
@@ -73,14 +78,17 @@
 }
 
 .download,
-.contacts {
+.contacts-btn {
+  font-family: "Wire One";
   width: 270px;
   padding: 17px 34px;
-  font-size: 30px;
+  font-size: 40px;
+  font-weight: 600;
   @include s {
     font-size: 13px;
     padding: 5px 15px;
   }
+  outline: none;
 }
 
 .download {
@@ -89,7 +97,19 @@
   border: none;
 }
 
-.contacts {
+.download:hover {
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
+  transform: scale(1.05);
+  transition: 0.5s;
+}
+
+.contacts-btn {
   background-color: transparent;
   border: 1px solid black;
+}
+
+.contacts-btn:hover {
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
+  transition: 0.5s;
+  transform: scale(1.05);
 }
