--- a/src/components/navbar/styles.scss
+++ b/src/components/navbar/styles.scss
@@ -6,13 +6,14 @@
   background-color: #1e1a2d;
   @include flex(center, center);
   border-radius: 30px 0 0 30px;
-  font-size: 15px;
+  font-size: 35px;
+  font-family: "Wire One";
   position: fixed;
   right: 0;
   top: 50%;
-  margin-top: -160px;
+  margin-top: -250px;
   z-index: 5;
-  @include s {
+  @include m {
     display: none;
   }
 }
