--- a/src/components/education/styles.scss
+++ b/src/components/education/styles.scss
@@ -37,9 +37,15 @@
 }
 
 .educationItem-reverse {
-  transform: rotate(180deg);
+  transform: rotate(180deg) !important;
   .text {
     transform: rotate(-180deg);
+  }
+  .item-container-rev {
+    .logo-part {
+      transform: rotate(180deg);
+      border-radius: 0 30px 30px 0;
+    }
   }
 }
 
@@ -67,7 +73,7 @@
 }
 
 .logo-part {
-  @include flex(center, center, column);
+  @include flex(center, center, column-reverse);
   background-color: #1e1a2d;
   padding: 50px;
   border-radius: 30px 0 0 30px;
