--- a/src/components/skills/styles.scss
+++ b/src/components/skills/styles.scss
@@ -47,7 +47,7 @@
 .level-icon {
   height: 30px;
   img {
-    height: 100%
+    height: 100%;
   }
 }
 
@@ -60,6 +60,7 @@
   height: 40px;
   background-color: white;
   padding: 2px;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.25);
   @include m {
     max-width: 450px;
     height: 30px;
@@ -83,7 +84,7 @@
   }
   @include s {
     flex-direction: column;
-  padding: 2px 5px;
+    padding: 2px 5px;
   }
 }
 
@@ -97,14 +98,14 @@
 .l80,
 .l90,
 .l100 {
-  background-color: #1e1a2d;
+  background: linear-gradient(
+    90deg,
+    rgba(255, 0, 134, 1) 0%,
+    rgba(30, 26, 45, 1) 51%
+  );
   height: 100%;
   border-radius: 0 15px 15px 0;
   position: relative;
-}
-
-.skill-title {
-  
 }
 
 .l10 {
@@ -145,4 +146,3 @@
 .l100 {
   width: 100%;
 }
-
