--- a/src/components/skills/styles.scss
+++ b/src/components/skills/styles.scss
@@ -98,11 +98,7 @@
 .l80,
 .l90,
 .l100 {
-  background: linear-gradient(
-    90deg,
-    rgba(255, 0, 134, 1) 0%,
-    rgba(30, 26, 45, 1) 51%
-  );
+  background: #1e1a2d;
   height: 100%;
   border-radius: 0 15px 15px 0;
   position: relative;
