--- a/src/components/about/styles.scss
+++ b/src/components/about/styles.scss
@@ -12,7 +12,7 @@
   background-color: #f1f1f1;
   @include flex(center, center);
   gap: 50px;
-  border-radius: 30px;
+  // border-radius: 30px;
   box-shadow: 15px 15px 15px rgba(0, 0, 0, 0.25);
   padding: 100px 0;
   @include m {
