--- a/src/components/contacts-section/styles.scss
+++ b/src/components/contacts-section/styles.scss
@@ -19,7 +19,7 @@
   @include flex(center, center, column);
   gap: 10px;
   background-color: #f1f1f1;
-  border-radius: 30px;
+  // border-radius: 30px;
   box-shadow: 15px 15px 15px rgba(0, 0, 0, 0.25);
   padding: 50px 70px;
   z-index: -3;
@@ -76,7 +76,7 @@
   @include m {
     img {
       background-color: #1e1a2d;
-      border-radius: 10px;
+      // border-radius: 10px;
     }
   }
 }
@@ -90,7 +90,7 @@
   padding: 50px 70px;
   @include flex(center, center);
   background-color: #f1f1f1;
-  border-radius: 30px;
+  // border-radius: 30px;
   box-shadow: 15px 15px 15px rgba(0, 0, 0, 0.25);
   form {
     @include flex(center, center, column);
@@ -116,7 +116,7 @@
       color: white;
       width: 100%;
       padding: 10px;
-      border-radius: 30px;
+      // border-radius: 30px;
       font-weight: 200;
       font-size: 20px;
     }
