--- a/src/components/education/styles.scss
+++ b/src/components/education/styles.scss
@@ -44,7 +44,7 @@
   .item-container-rev {
     .logo-part {
       transform: rotate(180deg);
-      border-radius: 0 30px 30px 0;
+      // border-radius: 0 30px 30px 0;
     }
   }
 }
@@ -59,12 +59,12 @@
   @include flex(flex-start, center);
   padding: 15px;
   background-color: white;
-  border-radius: 30px 0 0 30px;
+  // border-radius: 30px 0 0 30px;
   gap: 127px;
   box-shadow: 15px 15px 15px rgba(0, 0, 0, 0.25);
   @include m {
     gap: 20px;
-    border-radius: 0;
+    // border-radius: 0;
   }
 }
 
@@ -76,18 +76,18 @@
   @include flex(center, center, column-reverse);
   background-color: #1e1a2d;
   padding: 50px;
-  border-radius: 30px 0 0 30px;
+  // border-radius: 30px 0 0 30px;
   color: white;
   min-width: 427px;
   @include s {
     padding: 10px;
-    border-radius: 0;
+    // border-radius: 0;
     min-width: 130px;
   }
 
   @include m {
     padding: 10px;
-    border-radius: 0;
+    // border-radius: 0;
     min-width: 130px;
   }
 }
