--- a/src/components/skills/styles.scss
+++ b/src/components/skills/styles.scss
@@ -55,7 +55,7 @@
   @include flex(flex-start, center);
   overflow: hidden;
   border: 1px solid #e4e4e4;
-  border-radius: 0 15px 15px 0;
+  // border-radius: 0 15px 15px 0;
   width: 400px;
   height: 40px;
   background-color: white;
@@ -100,7 +100,7 @@
 .l100 {
   background: #1e1a2d;
   height: 100%;
-  border-radius: 0 15px 15px 0;
+  // border-radius: 0 15px 15px 0;
   position: relative;
 }
 
