--- a/src/components/contacts-section/styles.scss
+++ b/src/components/contacts-section/styles.scss
@@ -76,7 +76,7 @@
   @include m {
     img {
       background-color: #1e1a2d;
-      // border-radius: 10px;
+      border-radius: 10px;
     }
   }
 }
