--- a/src/components/education/styles.scss
+++ b/src/components/education/styles.scss
@@ -34,6 +34,9 @@
   width: 100%;
   max-height: 222px;
   @include flex(flex-end, center);
+  @include s {
+    font-size: 12px;
+  }
 }
 
 .educationItem-reverse {
@@ -66,10 +69,17 @@
     gap: 20px;
     // border-radius: 0;
   }
+
+  @include s {
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.25);
+  }
 }
 
 .item-container-rev {
   box-shadow: -15px -15px 15px rgba(0, 0, 0, 0.25);
+  @include s {
+    box-shadow: -5px -5px 5px rgba(0, 0, 0, 0.25);
+  }
 }
 
 .logo-part {
@@ -98,7 +108,7 @@
   font-size: 30px;
   font-weight: 200;
   @include s {
-    font-size: 10px;
+    font-size: 8px;
     max-height: 78px;
     max-width: 250px;
   }
