--- a/src/components/experience/styles.scss
+++ b/src/components/experience/styles.scss
@@ -33,7 +33,7 @@
 
 .experienceItem,
 .experienceItem-reverse {
-  width: 110%;
+  width: 100%;
   max-height: 222px;
   @include flex(center, center);
 }
@@ -55,6 +55,8 @@
   box-shadow: 15px 15px 15px rgba(0, 0, 0, 0.25);
   @include s {
     gap: 30px;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.25);
+
   }
 }
 
