--- a/src/components/main/styles.scss
+++ b/src/components/main/styles.scss
@@ -14,13 +14,6 @@
   }
 }
 
-.contacts {
-  background-color: white;
-  padding: 60px;
-  // border-radius: 30px;
-  transition: 0.5s;
-}
-
 .invisible {
   position: absolute;
   visibility: hidden;
@@ -74,6 +67,7 @@
   @include s {
     flex-direction: column;
     gap: 5px;
+    
   }
 }
 
@@ -88,6 +82,7 @@
   @include s {
     font-size: 13px;
     padding: 5px 15px;
+    max-width: 150px;
   }
   outline: none;
   &:hover {
