--- a/src/components/skills/styles.scss
+++ b/src/components/skills/styles.scss
@@ -41,6 +41,7 @@
     gap: 10px;
     font-size: 13px;
     padding: 10px;
+    max-width: 200px;
   }
 }
 
@@ -85,6 +86,7 @@
   @include s {
     flex-direction: column;
     padding: 2px 5px;
+    font-size: 10px;
   }
 }
 
